oxiplate-derive/tests/crates/unreachable-stable/tests/broken/unhandled-default-escaper-group-tag.stderr
error: proc-macro derive panicked
 --> tests/broken/unhandled-default-escaper-group-tag.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = help: message: internal error: entered unreachable code: Internal Oxiplate error. Enable `better-internal-errors` feature for an easier-to-debug error message. Error: Unhandled default escaper group tag

error[E0277]: `Data` doesn't implement `std::fmt::Display`
 --> tests/broken/unhandled-default-escaper-group-tag.rs:8:18
  |
8 |     print!("{}", Data);
  |             --   ^^^^ `Data` cannot be formatted with the default formatter
  |             |
  |             required by this formatting parameter
  |
help: the trait `std::fmt::Display` is not implemented for `Data`
 --> tests/broken/unhandled-default-escaper-group-tag.rs:5:1
  |
5 | struct Data;
  | ^^^^^^^^^^^
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
